@@ -246,6 +246,9 @@
     pkgerrmsg <- function(msg, pkg)
 	errmsg(msg, " for package ", sQuote(pkg))
 
+    tlim <- Sys.getenv("_R_INSTALL_ELAPSED_TIMEOUT_")
+    tlim <- if(is.na(tlim)) 0L else get_timeout(tlim)
+
     ## 'pkg' is the absolute path to package sources.
     do_install <- function(pkg)
     {
@@ -375,7 +378,8 @@
             unlink(filepath)
             owd <- setwd(lib)
             res <- system(paste(shQuote(ZIP), "-r9Xq", filepath,
-                                paste(curPkg, collapse = " ")))
+                                paste(curPkg, collapse = " ")),
+                          timeout = tlim)
             setwd(owd)
             if (res)
                 message("running 'zip' failed", domain = NA)
@@ -523,7 +527,7 @@
             if (debug) message("about to run ",
                                "R CMD SHLIB ", paste(args, collapse = " "),
                                domain = NA)
-            if (.shlib_internal(args) == 0L) {
+            if (.shlib_internal(args, timeout = tlim) == 0L) {
                 if(WINDOWS && !file.exists("install.libs.R")
                    && !length(Sys.glob("*.dll"))) {
                     message("no DLL was created")
@@ -557,13 +561,15 @@
                 if (file_test("-x", "configure")) {
                     res <- system(paste(paste(configure_vars, collapse = " "),
                                         "./configure",
-                                        paste(configure_args, collapse = " ")))
+                                        paste(configure_args, collapse = " ")),
+                                  timeout = tlim)
                     if (res) pkgerrmsg("configuration failed", pkg_name)
                 } else if (file.exists("configure"))
                     errmsg("'configure' exists but is not executable -- see the 'R Installation and Administration Manual'")
             }
             if (file.exists("Makefile"))
-                if (system(MAKE)) pkgerrmsg("make failed", pkg_name)
+                if (system(MAKE, timwout = tlim))
+                    pkgerrmsg("make failed", pkg_name)
             if (clean) system(paste(MAKE, "clean"))
             return()
         }
@@ -645,7 +651,7 @@
         if (use_configure) {
             if (WINDOWS) {
                 if (file.exists("configure.win")) {
-                    res <- system("sh ./configure.win")
+                    res <- system("sh ./configure.win", timeout = tlim)
                     if (res) pkgerrmsg("configuration failed", pkg_name)
                 } else if (file.exists("configure"))
                     message("\n",
@@ -664,7 +670,7 @@
                     ## in case the configure script calls SHLIB (some do)
                     cmd <- paste("_R_SHLIB_BUILD_OBJECTS_SYMBOL_TABLES_=false",
                                  cmd)
-                    res <- system(cmd)
+                    res <- system(cmd, timeout = tlim)
                     if (res) pkgerrmsg("configuration failed", pkg_name)
                 }  else if (file.exists("configure"))
                     errmsg("'configure' exists but is not executable -- see the 'R Installation and Administration Manual'")
@@ -739,8 +745,9 @@
                     makefiles <- c("Makefile.win", makefiles)
                     message("  running 'src/Makefile.win' ...", domain = NA)
                     res <- system(paste("make --no-print-directory",
-                                        paste("-f", shQuote(makefiles), collapse = " ")))
-                    if (res == 0) shlib_install(instdir, rarch)
+                                        paste("-f", shQuote(makefiles), collapse = " ")),
+                                  timeout = tlim)
+                    if (res == 0L) shlib_install(instdir, rarch)
                     else has_error <- TRUE
                 } else { ## no src/Makefile.win
                     srcs <- dir(pattern = "\\.([cfmM]|cc|cpp|f90|f95|mm)$",
@@ -815,8 +822,9 @@
                                    "Makefile",
                                    makevars_user())
                     res <- system(paste(MAKE,
-                                        paste("-f", shQuote(makefiles), collapse = " ")))
-                    if (res == 0) shlib_install(instdir, rarch)
+                                        paste("-f", shQuote(makefiles), collapse = " ")),
+                                  timeout = tlim)
+                    if (res == 0L) shlib_install(instdir, rarch)
                     else has_error <- TRUE
                     setwd(owd)
                 } else { ## no src/Makefile
@@ -1007,6 +1015,7 @@
                                                 "bzip2" = 2L,
                                                 "xz" = 3L,
                                                 TRUE)  # default to gzip
+                    ## move this to a separate process
 		    res <- try(data2LazyLoadDB(pkg_name, lib,
 					       compress = data_compress))
 		    if (inherits(res, "try-error"))
@@ -1141,6 +1150,7 @@
 		env <- sub("^.*=", "", env[1L])
                 .libPaths(c(lib0, env))
             } else libs0 <- NULL
+            ## move this to a separate process
 	    res <- try({
                 suppressPackageStartupMessages(.getRequiredPackages(quietly = TRUE))
                 makeLazyLoading(pkg_name, lib, keep.source = keep.source)
@@ -1234,7 +1244,8 @@
                 opts <- "--no-save --slave"
                 for (arch in test_archs) {
                     starsmsg("***", "arch - ", arch)
-                    out <- R_runR(cmd, opts, env = env, arch = arch)
+                    out <- R_runR(cmd, opts, env = env, arch = arch,
+                                  timeout = tlim)
                     if(length(attr(out, "status")))
                         msgs <- c(msgs, arch)
                     if(length(out))
@@ -1248,7 +1259,7 @@
             } else {
                 opts <- paste(if(deps_only) "--vanilla" else "--no-save",
                               "--slave")
-                out <- R_runR(cmd, opts, env = env)
+                out <- R_runR(cmd, opts, env = env, timeout = tlim)
                 if(length(out))
                     cat(paste(c(out, ""), collapse = "\n"))
                 if(length(attr(out, "status")))
@@ -1257,7 +1268,7 @@
         }
     }
 
-    options(showErrorCalls=FALSE)
+    options(showErrorCalls = FALSE)
     pkgs <- character()
     if (is.null(args)) {
         args <- commandArgs(TRUE)
@@ -1479,7 +1490,7 @@
                     cmd <- paste(cmd, collapse = " ")
                     if (debug) message("about to run ", cmd, domain = NA)
                     message("\n", "install for ", arch, "\n", domain = NA)
-                    res <- system(cmd)
+                    res <- system(cmd, timeout = tlim)
                     if(res) break
                 }
             }
@@ -1504,7 +1515,7 @@
                     cmd <- paste(cmd, collapse = " ")
                     if (debug) message("about to run ", cmd, domain = NA)
                     message("\n", "install for ", arch, "\n", domain = NA)
-                    res <- system(cmd)
+                    res <- system(cmd, timeout = tlim)
                     if(res) break
                 }
             }
@@ -1593,7 +1604,7 @@
             res <- try(dir.create(fn, showWarnings = FALSE))
             if (inherits(res, "try-error") || !res) ok <- FALSE
             else unlink(fn, recursive = TRUE)
-        } else ok <- file.access(lib, 2L) == 0
+        } else ok <- file.access(lib, 2L) == 0L
     }
     if (!ok)
         stop("ERROR: no permission to install to directory ",
@@ -1692,7 +1703,7 @@
 }
 
 ## for .SHLIB and R CMD INSTALL on all platforms
-.shlib_internal <- function(args)
+.shlib_internal <- function(args, timeout = 0)
 {
     Usage <- function()
         cat("Usage: R CMD SHLIB [options] files | linker options",
@@ -2023,7 +2034,8 @@
         res <- 0
     } else {
         if (preclean) system(paste(cmd, "shlib-clean"))
-        res <- system(cmd)
+        res <- system(cmd, timeout = timeout)
+        if(identical(res, 124L)) report_timeout(timeout)
         if((res == 0L) && build_objects_symbol_tables) {
             ## Should only do this if the previous one went ok.
             system(paste(cmd, "symbols.rds"))
